# mai_oop_lab1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.devcontainer/: devcontainer.json
include/: numb_func.h
src/: numb_func.cpp
tests/: test.cpp
